--- a/action.yml
+++ b/action.yml
@@ -7,9 +7,13 @@ branding:
   color: 'blue'
 inputs:
   SOURCE_DIR:
-    description: 'Source Dir form where files have to be uploaded'
+    description: 'Source Dir from where files have to be uploaded'
     required: true
     default: './public'
+  REMOTE_PATH:
+    description: 'Remote path where files are to be uploaded in DO space'
+    required: true
+    default: ''
   SPACE_REGION:
     description: 'Region of DO spaces'
     required: true
